实现返回OAuth2 access token的接口
