# api/v1/routes.py
@@ -14,6 +14,7 @@ from .resources.products import Products
 from .resources.product import Product
 from .resources.accounts import Accounts
 from .resources.account_username import AccountUsername
+from .resources.oauth_token import OauthToken
 
 
 routes = [
@@ -23,4 +24,5 @@ routes = [
     dict(resource=Product, urls=['/products/<int:productId>'], endpoint='product'),
     dict(resource=Accounts, urls=['/accounts'], endpoint='accounts'),
     dict(resource=AccountUsername, urls=['/account/<username>'], endpoint='account_username'),
+    dict(resource=OauthToken, urls=['/oauth/token'], endpoint='oauth_token'),
 ]
