# swagger.yaml
@@ -174,6 +174,69 @@ paths:
                 type: integer
               message:
                 type: string
+  /oauth/token:
+    get:
+      tags:
+        - Authentication
+      produces:
+        - application/json
+      parameters:
+        # http://localhost:8080/oauth/token?username=bookstore&password=hAmwR4328X7eKmrZzQTqJQcS6DxONeq&grant_type=password&client_id=bookstore_frontend&client_secret=bookstore_secret
+        - in: query
+          name: username
+          type: string
+          required: True
+        - in: query
+          name: password
+          type: string
+          required: True
+        - in: query
+          name: grant_type
+          type: string
+          required: True
+        - in: query
+          name: client_id
+          type: string
+          required: True
+        - in: query
+          name: client_secret
+          type: string
+          required: True
+      responses:
+        "200":
+          description: 成功获得令牌
+          schema:
+            $ref: "#/definitions/tokenModel"
+        "404":
+          description: 用户不存在
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                description: 操作状态
+                example: Fail to get access token
+              message:
+                type: string
+                description: 操作状态详述
+                example: User 'Messi' not found
+        "400":
+          description: 请求参数有误，例如密码错误，认证授权模式有误
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                description: 操作状态
+                example: Fail to get access token
+              message:
+                type: string
+                description: 操作状态详述
+                example: 
+                  - Invalid password for user 'Messi'
+                  - Grant type must be password
+                  - Invalid client id for user 'Messi'
+                  - Invalid client secret for user 'Messi'
 definitions:
   advertisementsModel:
     type: array
@@ -227,4 +290,43 @@ definitions:
             value:
               type: string
               description: 书本规格属性值
-      
+  tokenModel:
+    type: object
+    example:
+      access_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX25hbWUiOiJpY3lmZW5peCIsInNjb3BlIjpbIkFMTCJdLCJleHAiOjE1ODQyNTA3MDQsImF1dGhvcml0aWVzIjpbIlJPTEVfVVNFUiIsIlJPTEVfQURNSU4iXSwianRpIjoiMTNmNGNlMWQtNmY2OC00NzQxLWI5YzYtMzkyNzU1OGQ5NzRlIiwiY2xpZW50X2lkIjoiYm9va3N0b3JlX2Zyb250ZW5kIiwidXNlcm5hbWUiOiJpY3lmZW5peCJ9.82awQU4IcLVXr7w6pxcUCWrcEHKq-LRT7ggPT_ZPhE0
+      token_type: bearer
+      refresh_token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX25hbWUiOiJpY3lmZW5peCIsInNjb3BlIjpbIkFMTCJdLCJhdGkiOiIxM2Y0Y2UxZC02ZjY4LTQ3NDEtYjljNi0zOTI3NTU4ZDk3NGUiLCJleHAiOjE1ODU1MzU5MDQsImF1dGhvcml0aWVzIjpbIlJPTEVfVVNFUiIsIlJPTEVfQURNSU4iXSwianRpIjoiY2IwN2ZjZjEtMjViZS00MDRjLTkwNzctY2U5ZTlhZjFjOWEwIiwiY2xpZW50X2lkIjoiYm9va3N0b3JlX2Zyb250ZW5kIiwidXNlcm5hbWUiOiJpY3lmZW5peCJ9.-gNKkhspN1XfVybmS3Rnz2AYFdteZN4kvdEmC4g-aYk
+      expires_in: 10799
+      scope: ALL
+      authorities:
+        - ROLE_USER
+        - ROLE_ADMIN
+      username: icyfenix
+      jti: 13f4ce1d-6f68-4741-b9c6-3927558d974e
+    properties:
+      access_token:
+        type: string
+        description: 访问令牌
+      token_type:
+        type: string
+        description: 令牌类型
+      refresh_token:
+        type: string
+        description: 刷新令牌
+      expires_in:
+        type: integer
+        description: 令牌过期时间
+      scope:
+        type: string
+        description: 许可时间
+      authorities:
+        type: array
+        items:
+          type: string
+          description: 授予的权限
+      username:
+        type: string
+        description: 申请认证者
+      jti:
+        type: string
+        description: JWT标识符
